--- a/notebook_tutorials/【A】安装配置环境.ipynb
+++ b/notebook_tutorials/【A】安装配置环境.ipynb
@@ -75,9 +75,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple/\n",
+      "Requirement already satisfied: py2neo in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (2021.2.4)\n",
+      "Requirement already satisfied: pyahocorasick in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (2.1.0)\n",
+      "Requirement already satisfied: numpy in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (1.26.4)\n",
+      "Requirement already satisfied: pandas in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (2.2.2)\n",
+      "Requirement already satisfied: certifi in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (2024.6.2)\n",
+      "Requirement already satisfied: interchange~=2021.0.4 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (2021.0.4)\n",
+      "Requirement already satisfied: monotonic in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (1.6)\n",
+      "Requirement already satisfied: packaging in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (24.1)\n",
+      "Requirement already satisfied: pansi>=2020.7.3 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (2020.7.3)\n",
+      "Requirement already satisfied: pygments>=2.0.0 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (2.18.0)\n",
+      "Requirement already satisfied: six>=1.15.0 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (1.16.0)\n",
+      "Requirement already satisfied: urllib3 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from py2neo) (2.2.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from pandas) (2024.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from pandas) (2024.1)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install py2neo pyahocorasick numpy pandas -i https://pypi.tuna.tsinghua.edu.cn/simple/"
    ]
@@ -91,15 +114,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 验证安装成功\n",
     "import py2neo\n",
     "\n",
+    "#密码用自己的\n",
     "# 注意，这里的用户名为neo4j全局用户名，而非DBMS或者database的名称\n",
-    "g = Graph('http://localhost:7474', auth=('neo4j', 'ABC123'))"
+    "g = Graph('bolt://192.168.124.22:7688', auth=('neo4j', 'Zkdn@123456'),name=\"neo4j\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
+      "Collecting neo4j\n",
+      "  Downloading https://pypi.tuna.tsinghua.edu.cn/packages/2a/c6/14fc4682aa2c3070638af51abfe86cf38fbcb9270fba9330f4edd3ada2ee/neo4j-5.21.0-py3-none-any.whl (286 kB)\n",
+      "     ---------------------------------------- 0.0/286.8 kB ? eta -:--:--\n",
+      "     -------- ------------------------------ 61.4/286.8 kB 1.7 MB/s eta 0:00:01\n",
+      "     -------- ------------------------------ 61.4/286.8 kB 1.7 MB/s eta 0:00:01\n",
+      "     -------- ------------------------------ 61.4/286.8 kB 1.7 MB/s eta 0:00:01\n",
+      "     -------- ------------------------------ 61.4/286.8 kB 1.7 MB/s eta 0:00:01\n",
+      "     ------------------------ ----------- 194.6/286.8 kB 985.7 kB/s eta 0:00:01\n",
+      "     ------------------------- ---------- 204.8/286.8 kB 778.2 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ----------------------------- ------ 235.5/286.8 kB 722.1 kB/s eta 0:00:01\n",
+      "     ------------------------------------ 286.8/286.8 kB 421.6 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: pytz in c:\\programdata\\miniconda3\\envs\\myenv\\lib\\site-packages (from neo4j) (2024.1)\n",
+      "Installing collected packages: neo4j\n",
+      "Successfully installed neo4j-5.21.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install neo4j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from neo4j import GraphDatabase\n",
+    "\n",
+    "uri = \"bolt://192.168.124.22:7688\"  # 默认URI，根据你的Neo4j实例进行修改\n",
+    "username = \"neo4j\"             # 默认用户名\n",
+    "password = \"Zkdn@123456\"     # 你的Neo4j密码\n",
+    "\n",
+    "driver = GraphDatabase.driver(uri, auth=(username, password))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n': {'tagline': 'Welcome to the Real World', 'title': 'The Matrix', 'released': 1999}}\n",
+      "{'n': {'born': 1964, 'name': 'Keanu Reeves'}}\n",
+      "{'n': {'born': 1967, 'name': 'Carrie-Anne Moss'}}\n",
+      "{'n': {'born': 1961, 'name': 'Laurence Fishburne'}}\n",
+      "{'n': {'born': 1960, 'name': 'Hugo Weaving'}}\n",
+      "{'n': {'born': 1967, 'name': 'Lilly Wachowski'}}\n",
+      "{'n': {'born': 1965, 'name': 'Lana Wachowski'}}\n",
+      "{'n': {'born': 1952, 'name': 'Joel Silver'}}\n",
+      "{'n': {'born': 1978, 'name': 'Emil Eifrem'}}\n",
+      "{'n': {'tagline': 'Free your mind', 'title': 'The Matrix Reloaded', 'released': 2003}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def run_query(tx, query):\n",
+    "    result = tx.run(query)\n",
+    "    return result.data()\n",
+    "\n",
+    "with driver.session() as session:\n",
+    "    result = session.execute_read(run_query, \"MATCH (n) RETURN n LIMIT 10\")\n",
+    "    for record in result:\n",
+    "        print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close()"
    ]
   },
   {
@@ -112,7 +230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -126,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
