--- a/notebook_tutorials/【D】问答机器人完整demo体验.ipynb
+++ b/notebook_tutorials/【D】问答机器人完整demo体验.ipynb
@@ -18,7 +18,7 @@
     "class AnswerSearcher:\n",
     "    def __init__(self):\n",
     "        # self.g = Graph(\"http://localhost:7474\", username=\"neo4j\", password=\"tangyudiadid0\")\n",
-    "        self.g = Graph(\"http://localhost:7474\", auth=(\"neo4j\", \"111695\"))\n",
+    "        self.g = Graph('bolt://192.168.124.22:7688', auth=('neo4j', 'Zkdn@123456'),name=\"neo4j\")\n",
     "        self.num_limit = 20\n",
     "\n",
     "    '''执行cypher查询，并返回相应结果'''\n",
@@ -558,8 +558,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 在 notebook_tutorials 目录下创建 QAMedicalKG 目录,并把根目录下的dict目录复制到 QAMedicalKG 目录下"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +644,7 @@
        "{'args': {'肺气肿': ['disease']}, 'question_types': ['disease_not_food']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +681,7 @@
        "  'sql': [\"MATCH (m:Disease)-[r:no_eat]->(n:Food) where m.name = '肺气肿' return m.name, r.name, n.name\"]}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,16 +708,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['肺气肿忌食的食物包括有：带鱼；圆白菜；海虾；羊肉(瘦)']"
+       "['肺气肿忌食的食物包括有：海虾；羊肉(瘦)；带鱼；圆白菜']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,7 +743,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -750,7 +757,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
